# auralis

./: README.md  pyproject.toml
database_scripts/: 1760800247_init.sql  1760979304_make_root_folder_fk_deferrable.sql  README.md
scripts/database/: 1762878497_add_keys_to_data_room.sql
scripts/seeds/: mock_data.py
src/core/infrastructure/database/: database_client.py
src/core/infrastructure/proxies/ansarada/: ansarada_api.py  schema.graphql
src/core/infrastructure/repositories/: data_room_repository.py  document_tree_repository.py  project_repository.py  user_repository.py
src/core/models/: base_entity.py  data_room.py  data_room_source.py  document.py  document_tree.py  entity_status.py  folder.py  project.py  user.py  user_project.py  user_role.py
src/core/services/: data_room_service.py  document_tree_service.py  project_service.py  user_service.py
src/service_host/: main.py
