[project]
name = "auralis"
version = "0.1.0"
description = "Auralis - the light that surrounds your documents."
authors = [
    {name = "Ted Ly",email = "lydongcanh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.118.3,<0.119.0)"
]

[tool.poetry]
packages = [{include = "service_host", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
